# django-social

./: .gitignore  db.sqlite3  pyproject.toml
account/templates/registration/: logged_out.html  login.html  password_change_form.html
dwitter/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
dwitter/migrations/: 0001_initial.py  0002_dweet.py  0003_quote.py  0004_remove_quote_school_name.py  0005_remove_quote_pdf_file_quote_school_name.py  0006_quote_pdf_file.py  0007_remove_quote_pdf_file.py  0008_quote_pdf_file_alter_quote_school_name.py  0009_document.py  0010_delete_document_delete_quote.py  0011_quote.py  0012_alter_quote_pdf_file.py  0013_quote.py  0014_alter_quote_invoice_no.py  0015_quote_user.py  0016_quote.py  0017_alter_quote_user.py  0018_alter_quote_pdf_file.py  0019_alter_quote_pdf_file.py
dwitter/templates/: base.html  upload.html
dwitter/templates/dwitter/: dashboard.html  profile.html  profile_list.html
dwitter/templates/invoices/: quote.html
social/: settings.py  urls.py
