[tool.poetry]
name = "django-social"
version = "0.1.0"
description = ""
authors = ["William Liw <william@thelessonspace.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-restframework = "^0.0.1"
drf-yasg = "^1.20.0"
weasyprint = "^55.0"
django-s3direct = "^2.0.0"
django-storages = "^1.12.3"
boto3 = "^1.23.10"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
